--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
 .body {
   width: 1920px;
   height: 1080px;
@@ -9,5 +7,5 @@
 .p1 {
   color: white;
   font-size: 20px;
-  font-family: 'Roboto';
+  font-family: 'Epilogue';
 }
